--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "main": "",
   "repository": "git@github.com:tylerl0706/tylerl0706.github.io.git",
   "author": "Tyler Leonhardt <tylerl0706@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0",
+    "flexboxgrid": "^6.3.1"
+  }
 }
