--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
   "name": "tylerl0706.github.io",
   "version": "1.0.0",
-  "main": "js/index.js",
   "repository": "git@github.com:tylerl0706/tylerl0706.github.io.git",
   "author": "Tyler Leonhardt <tylerl0706@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.1.0",
-    "flexboxgrid": "^6.3.1"
-  }
+  "license": "MIT"
 }
